First commit for ongoing python assignment.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 homework_scratch/portoflio_theory_3_1.ipynb
 homework_scratch/portoflio_theory_3_1.pdf
+Python 4 - Efficient Frontier/python_4_efficient_frontier_files/figure-html/cell-16-output-3.png
+Python 4 - Efficient Frontier/python_4_efficient_frontier_files/figure-html/cell-17-output-3.png
+Python 4 - Efficient Frontier/python_4_efficient_frontier_files/figure-html/cell-23-output-1.png
+Python 4 - Efficient Frontier/python_4_efficient_frontier_files/figure-html/cell-25-output-2.png
+Python 4 - Efficient Frontier/python_4_efficient_frontier_files/figure-html/cell-27-output-2.png
