Updated excersie 4 and completed number 5.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,10 @@ Python 4 - Efficient Frontier/python_4_efficient_frontier_files/figure-html/cell
 Python 4 - Efficient Frontier/python_4_efficient_frontier_files/figure-html/cell-23-output-1.png
 Python 4 - Efficient Frontier/python_4_efficient_frontier_files/figure-html/cell-25-output-2.png
 Python 4 - Efficient Frontier/python_4_efficient_frontier_files/figure-html/cell-27-output-2.png
+homework_scratch/discuss_test.ipynb
+Python 4 - Efficient Frontier/python_4_efficient_frontier_files/figure-html/cell-32-output-2.png
+Python 4 - Efficient Frontier/python_4_efficient_frontier_files/figure-html/cell-43-output-1.png
+Python 4 - Efficient Frontier/python_4_efficient_frontier_files/figure-html/cell-78-output-1.png
+Python 4 - Efficient Frontier/python_4_efficient_frontier_files/figure-html/cell-80-output-1.png
+Python 4 - Efficient Frontier/python_4_efficient_frontier_files/figure-html/cell-82-output-2.png
+Python 4 - Efficient Frontier/python_4_efficient_frontier_files/figure-html/cell-83-output-2.png
